--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ compiled-firmware/firmware.bin
 compiled-firmware/firmware.ld
 compiled-firmware/firmware.packed.bin
 app/spectrumreborn.c
+/compiled-firmware
