--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ compiled-firmware/firmware.bin
 compiled-firmware/firmware.ld
 
 compiled-firmware/firmware.packed.bin
+Chirp/Quansheng_UV-K5 (ROBBY69)_20250508.csv
+Chirp/Quansheng_UV-K5 (ROBBY69)_20250508.img
+Chirp/test1M.csv
