--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 Chirp/Quansheng_UV-K5 (ROBBY69)_20250508.csv
 Chirp/Quansheng_UV-K5 (ROBBY69)_20250508.img
 Chirp/test1M.csv
+compiled-firmware/firmware
+compiled-firmware/firmware.bin
+compiled-firmware/firmware.packed.bin
