--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ compiled-firmware/firmware.bin
 compiled-firmware/firmware.packed.bin
 compiled-firmware/firmware.ld
 compiled-firmware/robzyl.fr.packed.bin
+nul
