--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ compiled-firmware/firmware.packed.bin
 compiled-firmware/firmware.ld
 compiled-firmware/robzyl.fr.packed.bin
 nul
+/compiled-firmware
